# matter-maestro

./: .gitignore  .replit  README.md  pyproject.toml
attached_assets/: Pasted--Instructions-for-Group-Management-in-Replit-These-instructions-outline-how-to-implement-the-creatio-1735635925481.txt  Pasted--Instructions-for-Implementing-Groups-and-Scenes-in-Replit-These-instructions-will-guide-you-i-1735602122390.txt  Pasted-2024-12-31-08-51-04-503-backend-credentials-credential-manager-INFO-No-existing-credentials-fi-1735635120920.txt  Pasted-2024-12-31-08-55-08-717-backend-credentials-credential-manager-DEBUG-Loaded-credentials-with-f-1735635390206.txt  Pasted-Here-s-a-comprehensive-list-of-all-the-functionalities-discussed-for-the-Matter-Maestro-project-bro-1735478290335.txt  Pasted-INFO-werkzeug-172-31-196-83-31-Dec-2024-08-52-58-GET-api-credentials-ui-HTTP-1-1-200-202-1735635262696.txt  Pasted-Instructions-for-Replit-Assistant-Project-Goals-1-Local-First-Matter-Fabric-Controller-Provide-a-1735471183010.txt  Pasted-Using-the-Python-Matter-Server-to-set-up-a-new-fabric-controller-involves-utilizing-the-server-s-API-1735601712685.txt
src/backend/: __init__.py  app.py  logger.py
src/backend/backup/: __init__.py  manager.py  routes.py
src/backend/credentials/: __init__.py  credential_manager.py  routes.py
src/backend/database/: __init__.py  database.py
src/backend/devices/: __init__.py  routes.py
src/backend/groups/: __init__.py  routes.py
src/backend/matter/: __init__.py  protocol_manager.py
src/matter_maestro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+15 files in other folders)
