[project]
name = "repl-nix-localmattercontroller"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "appdirs>=1.4.4",
    "email-validator>=2.2.0",
    "flasgger>=0.9.7.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "python-matter-server>=7.0.0",
    "tinydb>=4.8.2",
]
