
[project]
name = "matter-maestro"
version = "0.1.0"
description = "A local-first Matter fabric controller"
requires-python = ">=3.11"
authors = [
    {name = "Michael Cumming", email = "mike@4831.com"}
]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "appdirs>=1.4.4",
    "email-validator>=2.2.0",
    "flasgger>=0.9.7.1",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "python-matter-server>=7.0.0",
    "tinydb>=4.8.2",
    "flask-wtf>=1.2.2",
    "oauthlib>=3.2.2",
]

[project.urls]
Homepage = "https://github.com/yourusername/matter-maestro"
Repository = "https://github.com/yourusername/matter-maestro.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
